Prefer routes originated near where we receive them
When a route is originated near where we receive it, there's a good
chance that traffic never leaves the region and that the latency to the
originating autonomous system's network edge is low.

In particular, this resolves an interesting issue I encountered today.
All five peers at LGA are themselves peered with BURBLE-AS. Four of the
five are peered with BURBLE-AS's Beauharnois server, but one is only
peered with the (much farther away) Frankfurt server. BIRD selected the
path that ultimately went through Frankfurt. With these changes, BIRD
picks one of the other four peers. Latency to BURBLE-AS anycast services
is greatly reduced, since traffic to BURBLE-AS now reaches BURBLE-AS in
Beauharnois, rather than being served from Frankfurt.

As of this commit, we use the following BGP local preference scheme:

100: local routes
 50: external routes originated and received in the same DN42 region
 40: external routes originated in a DN42 region "near" the region in
     which they were received (currently, for North American regions,
     "near" means "one of the other North American regions")
 10: all other external routes

--- a/ansible/roles/bird/templates/backbone.conf.j2
+++ b/ansible/roles/bird/templates/backbone.conf.j2
@@ -224,6 +224,18 @@ filter from_exterior {
     if net ~ ::/0 && roa_check(roa_v6, net, bgp_path.last) != ROA_VALID then {
         reject "ROA check failed for ", net, " AS ", bgp_path.last;
     }
+    if (64511, {{ dn42_region }}) ~ bgp_community then {
+        bgp_local_pref = 50;
+{% if dn42_nearby_regions is defined and dn42_nearby_regions != [] %}
+{% set or_op = joiner(" || ") %}
+    } else if {% for region in dn42_nearby_regions -%}
+                  {{ or_op() }}(64511, {{ region }}) ~ bgp_community
+              {%- endfor %} then {
+        bgp_local_pref = 40;
+{% endif %}
+    } else {
+        bgp_local_pref = 10;
+    }
     accept;
 }
 
