--- a/ansible/roles/bird/templates/backbone.conf.j2
+++ b/ansible/roles/bird/templates/backbone.conf.j2
@@ -224,14 +224,16 @@ filter from_exterior {
     if net ~ ::/0 && roa_check(roa_v6, net, bgp_path.last) != ROA_VALID then {
         reject "ROA check failed for ", net, " AS ", bgp_path.last;
     }
-    if (64511, {{ dn42_region }}) ~ bgp_community then {
+    if bgp_path.len <= 1 then {
         bgp_local_pref = 50;
+    } else if (64511, {{ dn42_region }}) ~ bgp_community then {
+        bgp_local_pref = 40;
 {% if dn42_nearby_regions is defined and dn42_nearby_regions != [] %}
 {% set or_op = joiner(" || ") %}
     } else if {% for region in dn42_nearby_regions -%}
                   {{ or_op() }}(64511, {{ region }}) ~ bgp_community
               {%- endfor %} then {
-        bgp_local_pref = 40;
+        bgp_local_pref = 30;
 {% endif %}
     } else {
         bgp_local_pref = 10;
