Use wg-quick instead of /etc/network/interfaces
wg-quick (as a systemd service) waits for other network interfaces to be
up before creating Wireguard interfaces. Switching to it should
therefore reduce delays and errors related to resolution of Wireguard
endpoint addresses, which we've observed frequently during system boot
when using /etc/network/interfaces to configure Wireguard tunnels.

--- a/ansible/roles/wg_interfaces/templates/if.conf.j2
+++ b/ansible/roles/wg_interfaces/templates/if.conf.j2
@@ -1,9 +1,21 @@
-{% if item.port is defined %}
 [Interface]
+{% if item.port is defined %}
 ListenPort = {{ item.port }}
-
 {% endif %}
+{% if item.address_v4 is defined %}
+{% if item.pointopoint_v4 is defined %}
+Address = {{ item.address_v6 }}
+PostUp = ip addr add {{ item.address_v4 }} peer {{ item.pointopoint_v4 }} dev {{ item.name }}
+{% else %}
+Address = {{ item.address_v4 }}, {{ item.address_v6 }}
+{% endif %}
+{% else %}
+Address = {{ item.address_v6 }}
+{% endif %}
+PostUp = wg set {{ item.name }} private-key /etc/wireguard/private_key
+Table = off
 {% for peer in item.peers %}
+
 [Peer]
 {% if peer.host is defined %}
 PublicKey = {{ hostvars[peer.host].wg_public_key }}
